syntax = "proto3";

option go_package = "github.com/aminsalami/repartido/internal/discovery/discovery";

service discovery {
  rpc get(NodeId) returns (NodeInfo) {}
  rpc getRing(Empty) returns (RingListResponse) {}
  rpc register(NodeInfo) returns (Response) {}
  rpc unregister(NodeId) returns (Response) {}
}

message Empty {}

message NodeId {
  string id = 1;
}

message Response{
  bool ok = 1;
  string message = 2;
}

message NodeInfo {
  string id = 1;
  string name = 2;
  string host = 3;
  int32 port = 4;
  int32 ram_size = 5;
  string last_ping = 6;
}

message RealNode {
  NodeInfo info = 1;
  repeated int32 vnumbers = 2;
}

message RingListResponse {
  bool ok = 1;
  repeated RealNode nodes = 2;
}
